Updated color scheme, variable names, and changed flex-direction for main-content so the sidebar will display on the right side

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -1,11 +1,10 @@
-$brown: #3D0D00;
+$black: #08080D;
 $orange: #B82800;
-$light-brown: #521200;
-$light-orange: #FF781F;
-$light-pink: #C94090;
+$light-blue: #A0D2DB;
+$light-purple: #C490D1;
 $dark-pink: #A30062;
 $rgba-brown: rgba(61,13, 0, 1);
 $rgba-orange: rgba(184, 40, 0, 1);
-$rgba-light-orange: rgba(255, 120, 31, 1);
-$rgba-light-pink: rgba(201, 64, 144, 1);
-$rgba-dark-pink: rgba(163, 0, 98, 1);
+$rgba-light-blue: rgba(160, 210, 219, 1);
+$rgba-light-purple: rgba(196, 144, 209, 1);
+$rgba-dark-pink: rgba(184, 51, 106, 1);
