--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -1,40 +1,36 @@
-@mixin dyke-gradient {
+@mixin emery-gradient {
     padding-bottom:10px;
     background: /* gradient can be an image */
       linear-gradient(
         to right, 
-        $rgba-brown 0%,
-        $rgba-orange 22%,
-        $rgba-light-orange 47%,
-        $rgba-light-pink 67%,
+        $rgba-light-blue 0%,
+        $rgba-light-purple 50%,
         $rgba-dark-pink 100%
       )
       left 
       bottom
-      $light-brown    
+      $black    
       no-repeat; 
     background-size: 200px 7px ;/* if linear-gradient, we need to resize it */
     background-position: bottom center;
 }
-@mixin dyke-gradient-border {
+@mixin emery-gradient-border {
   background: /* gradient can be an image */
     linear-gradient(
       to bottom, 
-      $rgba-brown 0%,
-      $rgba-orange 22%,
-      $rgba-light-orange 47%,
-      $rgba-light-pink 67%,
+      $rgba-light-blue 0%,
+      $rgba-light-purple 50%,
       $rgba-dark-pink 100%
     )
     left 
     bottom
-    $light-brown    
+    $black    
     no-repeat; 
 }
 @mixin page-header {
     h1 {
-      border-bottom: 3px solid $light-orange;
-      color: $light-pink;
+      border-bottom: 3px solid $light-blue;
+      color: $light-purple;
       margin-bottom: 20px;
       text-transform: lowercase;
       text-align: center;
@@ -43,23 +39,23 @@
 @mixin block-links {
   a:link,
   a:visited {
-      color: $brown;
+      color: $black;
       display: block;
       margin-bottom: 10px;
       padding: 10px;
       &:nth-of-type(even) {
-          background: $light-orange;
-          border-bottom: 3px solid $light-orange;
+          background: $light-blue;
+          border-bottom: 3px solid $light-blue;
           &:hover {
               background: none;
           }
       }
       &:nth-of-type(odd) {
-          background: $light-pink;
-          border-bottom: 3px solid $light-pink;
+          background: $light-purple;
+          border-bottom: 3px solid $light-purple;
           &:hover {
               background: none;
-              border-bottom: 3px solid $light-pink;
+              border-bottom: 3px solid $light-purple;
           }
       }
       &:hover {
