--- a/css/main.scss
+++ b/css/main.scss
@@ -98,7 +98,7 @@
   @import "colors";
   @import "mixins";
   body {
-      background: $light-brown;
+      background: $black;
       color: #fff;
       font-family: $body-font;
   }
@@ -123,9 +123,9 @@
           justify-content: space-between;
           margin: 20px;
           i {
-              color: $light-orange;
+              color: $light-blue;
               &:hover {
-                  color: $light-pink;
+                  color: $light-purple;
                   transition: .3s color;
               }
           }
@@ -137,7 +137,7 @@
                   a:visited {
                       color: #fff;
                       &:hover {
-                          color: $light-pink;
+                          color: $light-purple;
                           transition: .3s color;
                       }
                   }
@@ -149,12 +149,12 @@
   #hero {
       padding: 20px 0px;
       .hero-logo-span {
-          @include dyke-gradient;
-          color: $light-orange;
+          @include emery-gradient;
+          color: $light-blue;
           font-weight: 900;
           text-align: center;
           span {
-              color: $light-pink;
+              color: $light-purple;
           }
       }
   }
@@ -168,12 +168,12 @@
           display: flex;
           flex-direction: column;
           .blog-single-post-gradient-wrapper {
-              @include dyke-gradient-border;
+              @include emery-gradient-border;
               padding: 10px;
               margin-bottom: 20px;
           }
           article.blog-single-post {
-              background: $light-brown;
+              background: $black;
               border-radius: 10px;
               padding: 10px;
           }
@@ -183,9 +183,9 @@
          article.blog-single-post {
              padding: 5px 0px;
              h1 {
-                 background: $light-orange;
-                 border-bottom: 3px solid $light-orange;
-                 color: $brown;
+                 background: $light-blue;
+                 border-bottom: 3px solid $light-blue;
+                 color: $black;
                  font-size: 1.25rem;
                  line-height: 1.2rem;
                  padding: 10px;
@@ -198,14 +198,14 @@
                  }
              }
              h3.blog-post-metadata {
-                 color: $light-orange;
+                 color: $light-blue;
                  font-size: .75rem;
                  font-weight: $bold;
                  padding: 5px;
                  text-transform: uppercase;
                  span {
                      color: #fff;
-                     border-bottom: 2px solid $light-pink;
+                     border-bottom: 2px solid $light-purple;
                  }
              }
              img {
@@ -267,14 +267,14 @@
                   padding: 10px 0px;
               }
               h2 {
-                  @include dyke-gradient;
-                  color: $light-orange;
+                  @include emery-gradient;
+                  color: $light-blue;
                   font-size: 1rem;
                   line-height: 1.25rem;
                   span {
-                      color: $light-pink;
+                      color: $light-purple;
                       i {
-                          color: $light-orange;
+                          color: $light-blue;
                           font-weight: $light;
                       }
                   }
@@ -283,15 +283,15 @@
                   line-height: 1.25rem;
               }
               i {
-                  color: $light-pink;
+                  color: $light-purple;
               }
           }
       }
       aside.sidebar {
           .content-wrapper {
               h2 {
-                  @include dyke-gradient;
-                  color: $light-orange;
+                  @include emery-gradient;
+                  color: $light-blue;
                   padding: 10px 0px;
                   text-transform: lowercase;
                   text-align: center;
@@ -312,13 +312,13 @@
               }
               .sidebar-about {
                   h1.sidebar-logo-span {
-                      @include dyke-gradient;
-                      color: $light-orange;
+                      @include emery-gradient;
+                      color: $light-blue;
                       font-size: 1.5rem;
                       line-height: 1.65rem;
                       text-align: center;
                       span:nth-of-type(1) {
-                          color: $light-pink;
+                          color: $light-purple;
                           font-weight: $bold;
                           display: inline-block;
                           font-size: 1.5rem !important;
@@ -333,8 +333,8 @@
                           line-height: 1.1rem;
                           a:link,
                           a:visited {
-                              border-bottom: 2px solid $light-pink;
-                              color: $light-orange;
+                              border-bottom: 2px solid $light-purple;
+                              color: $light-blue;
                               &:hover {
                                   color: #fff;
                                   transition: .3s color;
@@ -352,10 +352,10 @@
                   padding-top: 10px;
                   text-align: center;
                   i {
-                      color: $light-pink;
+                      color: $light-purple;
                       padding-left: 5px;
                       &:hover {
-                          color: $light-orange;
+                          color: $light-blue;
                           transition: .3s color;
                       }
                   }
@@ -371,18 +371,18 @@
                       align-items: center;
                       width: 100%;
                       input[type="text"] {
-                          background: $light-pink;
-                          border: 3px solid $light-pink;
+                          background: $light-purple;
+                          border: 3px solid $light-purple;
                           padding: 5px;
                           width: 100%;
                       }
                       input::placeholder {
-                          color: $brown;
+                          color: $black;
                           font-weight: $bold;
                       }
                       button[type="submit"] {
-                          background: $light-orange;
-                          border: 3px solid $light-orange;
+                          background: $light-blue;
+                          border: 3px solid $light-blue;
                           padding: 5px;
                           i {
                               color: $dark-pink;
@@ -405,15 +405,15 @@
                       }
                       input[type="submit"].newsletter-button {
                           width: 265px;
-                          background: $light-orange;
+                          background: $light-blue;
                           border: none;
-                          border-bottom: 3px solid $light-orange;
-                          color: $brown;
+                          border-bottom: 3px solid $light-blue;
+                          color: $black;
                           font-weight: $bold;
                           text-transform: lowercase;
                           &:hover {
                               background: none;
-                              border-bottom: 3px solid $light-orange;
+                              border-bottom: 3px solid $light-blue;
                               color: #fff;
                               transition: .3s background-color;
                           }
@@ -430,26 +430,26 @@
           flex-direction: column;
           justify-content: space-between;
           h1.footer-logo-span {
-              @include dyke-gradient;
-              color: $light-orange;
+              @include emery-gradient;
+              color: $light-blue;
               font-size: 1rem;
               line-height: 1rem;
               text-align: center;
               span:nth-of-type(1) {
-                  color: $light-pink;
+                  color: $light-purple;
               }
               i {
-                  color: $light-pink;
+                  color: $light-purple;
               }
           }
           .footer-social-media {
               margin-top: 10px;
               text-align: center;
               i {
-                  color: $light-pink;
+                  color: $light-purple;
                   padding-left: 5px;
                   &:hover {
-                      color: $light-orange;
+                      color: $light-blue;
                       transition: .3s color;
                   }
               }
@@ -465,23 +465,16 @@
                       display: inline-block;
                       margin-left: 15px;
                       padding: 10px;
-                      &:nth-of-type(1) {
-                          background: $orange;
-                          border-bottom: 3px solid $orange;
+                      &:nth-of-type(even) {
+                          background: $light-blue;
+                          border-bottom: 3px solid $light-blue;
                           &:hover {
                               background: none;
                           }
                       }
-                      &:nth-of-type(2) {
-                          background: $light-pink;
-                          border-bottom: 3px solid $light-pink;
-                          &:hover {
-                              background: none;
-                          }
-                      }
-                      &:nth-of-type(3) {
-                          background: $dark-pink;
-                          border-bottom: 3px solid $dark-pink;
+                      &:nth-of-type(odd) {
+                          background: $light-purple;
+                          border-bottom: 3px solid $light-purple;
                           &:hover {
                               background: none;
                           }
@@ -491,9 +484,9 @@
                       }
                       a:link,
                       a:visited {
+                          color: $black;
                           &:hover {
                               color: #fff;
-                              transition: .3s color;
                           }
                       }
                   }
@@ -511,7 +504,7 @@
       }
       #main-content {
           display: flex;
-          flex-direction: row-reverse;
+          flex-direction: row;
           justify-content: space-between;
           /* blog on the front page that shows the latest posts as preview blocks */ 
           .blog.front-page {
