--- a/css/main.css
+++ b/css/main.css
@@ -81,10 +81,10 @@ textarea {
 body {
   background: #08080D;
   color: #fff;
-  font-family: "Raleway", sans-serif; }
+  font-family: "Barlow", sans-serif; }
 
 h1, h2, h3, h4, h5, p, ul, li {
-  font-family: "Raleway", sans-serif;
+  font-family: "Barlow", sans-serif;
   margin: 0;
   padding: 0; }
 
@@ -125,13 +125,64 @@ header .content-wrapper {
     padding-bottom: 10px;
     background: linear-gradient(to right, #a0d2db 0%, #c490d1 50%, #b8336a 100%) left bottom #08080D no-repeat;
     background-size: 200px 7px;
-    /* if linear-gradient, we need to resize it */
     background-position: bottom center;
     color: #A0D2DB;
     font-weight: 900;
     text-align: center; }
     #hero .hero-logo-span span {
       color: #C490D1; }
+
+/* hub selection */
+#hub-selection .content-wrapper a:link,
+#hub-selection .content-wrapper a:visited {
+  border-radius: 5px;
+  color: #08080D;
+  display: block;
+  margin-bottom: 10px;
+  padding: 10px; }
+  #hub-selection .content-wrapper a:link:nth-of-type(even),
+  #hub-selection .content-wrapper a:visited:nth-of-type(even) {
+    background: #A0D2DB;
+    border-bottom: 5px solid #A0D2DB; }
+    #hub-selection .content-wrapper a:link:nth-of-type(even):hover,
+    #hub-selection .content-wrapper a:visited:nth-of-type(even):hover {
+      background: none; }
+  #hub-selection .content-wrapper a:link:nth-of-type(odd),
+  #hub-selection .content-wrapper a:visited:nth-of-type(odd) {
+    background: #C490D1;
+    border-bottom: 5px solid #C490D1; }
+    #hub-selection .content-wrapper a:link:nth-of-type(odd):hover,
+    #hub-selection .content-wrapper a:visited:nth-of-type(odd):hover {
+      background: none;
+      border-bottom: 5px solid #C490D1; }
+  #hub-selection .content-wrapper a:link:hover,
+  #hub-selection .content-wrapper a:visited:hover {
+    color: #fff;
+    transition: .5s background-color !important;
+    transition: .1s color; }
+#hub-selection .content-wrapper h2 {
+  text-align: center;
+  text-transform: lowercase;
+  padding: 10px 0px; }
+  #hub-selection .content-wrapper h2 span {
+    color: #A0D2DB;
+    font-weight: 300; }
+#hub-selection .content-wrapper .hub-link-container {
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+#hub-selection .content-wrapper #hub-one {
+  margin: 0 auto; }
+  #hub-selection .content-wrapper #hub-one a:link,
+  #hub-selection .content-wrapper #hub-one a:visited {
+    width: 100px;
+    height: 20px; }
+  #hub-selection .content-wrapper #hub-one #hub-description {
+    opacity: 0;
+    padding-left: 20px; }
+  #hub-selection .content-wrapper #hub-one:hover #hub-description {
+    opacity: 1;
+    transition: 1s opacity; }
 
 /* blog */
 #main-content {
@@ -146,7 +197,8 @@ header .content-wrapper {
     flex-direction: column; }
     #main-content .blog.front-page .blog-single-post-gradient-wrapper {
       background: linear-gradient(to bottom, #a0d2db 0%, #c490d1 50%, #b8336a 100%) left bottom #08080D no-repeat;
-      padding: 10px;
+      border-radius: 10px;
+      padding: 7px;
       margin-bottom: 20px; }
     #main-content .blog.front-page article.blog-single-post {
       background: #08080D;
@@ -156,7 +208,8 @@ header .content-wrapper {
     padding: 5px 0px; }
     #main-content .blog article.blog-single-post h1 {
       background: #A0D2DB;
-      border-bottom: 3px solid #A0D2DB;
+      border-bottom: 5px solid #A0D2DB;
+      border-radius: 5px;
       color: #08080D;
       font-size: 1.25rem;
       line-height: 1.2rem;
@@ -231,7 +284,6 @@ header .content-wrapper {
       padding-bottom: 10px;
       background: linear-gradient(to right, #a0d2db 0%, #c490d1 50%, #b8336a 100%) left bottom #08080D no-repeat;
       background-size: 200px 7px;
-      /* if linear-gradient, we need to resize it */
       background-position: bottom center;
       color: #A0D2DB;
       font-size: 1rem;
@@ -249,7 +301,6 @@ header .content-wrapper {
     padding-bottom: 10px;
     background: linear-gradient(to right, #a0d2db 0%, #c490d1 50%, #b8336a 100%) left bottom #08080D no-repeat;
     background-size: 200px 7px;
-    /* if linear-gradient, we need to resize it */
     background-position: bottom center;
     color: #A0D2DB;
     padding: 10px 0px;
@@ -266,42 +317,46 @@ header .content-wrapper {
       line-height: 1rem; }
   #main-content aside.sidebar .content-wrapper .sidebar-section {
     padding: 10px 0px; }
-  #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span {
-    padding-bottom: 10px;
-    background: linear-gradient(to right, #a0d2db 0%, #c490d1 50%, #b8336a 100%) left bottom #08080D no-repeat;
-    background-size: 200px 7px;
-    /* if linear-gradient, we need to resize it */
-    background-position: bottom center;
-    color: #A0D2DB;
-    font-size: 1.5rem;
-    line-height: 1.65rem;
-    text-align: center; }
-    #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span:nth-of-type(1) {
-      color: #C490D1;
-      font-weight: 600;
-      display: inline-block;
-      font-size: 1.5rem !important;
-      line-height: 1.65rem !important;
-      text-align: center !important; }
-    #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span {
-      color: #fff;
-      display: block;
-      font-size: 1rem;
-      font-weight: 300;
-      line-height: 1.1rem; }
-      #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span a:link,
-      #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span a:visited {
-        border-bottom: 2px solid #C490D1;
-        color: #A0D2DB; }
-        #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span a:link:hover,
-        #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span a:visited:hover {
-          color: #fff;
-          transition: .3s color; }
+  #main-content aside.sidebar .content-wrapper .sidebar-about {
+    text-transform: lowercase; }
+    #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span {
+      padding-bottom: 10px;
+      background: linear-gradient(to right, #a0d2db 0%, #c490d1 50%, #b8336a 100%) left bottom #08080D no-repeat;
+      background-size: 200px 7px;
+      background-position: bottom center;
+      color: #A0D2DB;
+      font-size: 1.5rem;
+      line-height: 1.65rem;
+      text-align: center; }
+      #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span:nth-of-type(1) {
+        color: #C490D1;
+        font-weight: 600;
+        display: inline-block;
+        font-size: 1.5rem !important;
+        line-height: 1.65rem !important;
+        text-align: center !important; }
+      #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span {
+        color: #fff;
+        display: block;
+        font-size: 1rem;
+        font-weight: 300;
+        line-height: 1.1rem; }
+        #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span a:link,
+        #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span a:visited {
+          border-bottom: 2px solid #C490D1;
+          color: #A0D2DB; }
+          #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span a:link:hover,
+          #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span a:visited:hover {
+            color: #fff;
+            transition: .3s color; }
+        #main-content aside.sidebar .content-wrapper .sidebar-about h1.sidebar-logo-span span:last-of-type {
+          padding-bottom: 10px; }
   #main-content aside.sidebar .content-wrapper .sidebar-browse-topic {
     text-align: center;
     text-transform: lowercase; }
     #main-content aside.sidebar .content-wrapper .sidebar-browse-topic a:link,
     #main-content aside.sidebar .content-wrapper .sidebar-browse-topic a:visited {
+      border-radius: 5px;
       color: #08080D;
       display: block;
       margin-bottom: 10px;
@@ -309,18 +364,18 @@ header .content-wrapper {
       #main-content aside.sidebar .content-wrapper .sidebar-browse-topic a:link:nth-of-type(even),
       #main-content aside.sidebar .content-wrapper .sidebar-browse-topic a:visited:nth-of-type(even) {
         background: #A0D2DB;
-        border-bottom: 3px solid #A0D2DB; }
+        border-bottom: 5px solid #A0D2DB; }
         #main-content aside.sidebar .content-wrapper .sidebar-browse-topic a:link:nth-of-type(even):hover,
         #main-content aside.sidebar .content-wrapper .sidebar-browse-topic a:visited:nth-of-type(even):hover {
           background: none; }
       #main-content aside.sidebar .content-wrapper .sidebar-browse-topic a:link:nth-of-type(odd),
       #main-content aside.sidebar .content-wrapper .sidebar-browse-topic a:visited:nth-of-type(odd) {
         background: #C490D1;
-        border-bottom: 3px solid #C490D1; }
+        border-bottom: 5px solid #C490D1; }
         #main-content aside.sidebar .content-wrapper .sidebar-browse-topic a:link:nth-of-type(odd):hover,
         #main-content aside.sidebar .content-wrapper .sidebar-browse-topic a:visited:nth-of-type(odd):hover {
           background: none;
-          border-bottom: 3px solid #C490D1; }
+          border-bottom: 5px solid #C490D1; }
       #main-content aside.sidebar .content-wrapper .sidebar-browse-topic a:link:hover,
       #main-content aside.sidebar .content-wrapper .sidebar-browse-topic a:visited:hover {
         color: #fff;
@@ -337,6 +392,7 @@ header .content-wrapper {
         transition: .3s color; }
   #main-content aside.sidebar .content-wrapper .sidebar-latest-posts a:link,
   #main-content aside.sidebar .content-wrapper .sidebar-latest-posts a:visited {
+    border-radius: 5px;
     color: #08080D;
     display: block;
     margin-bottom: 10px;
@@ -344,18 +400,18 @@ header .content-wrapper {
     #main-content aside.sidebar .content-wrapper .sidebar-latest-posts a:link:nth-of-type(even),
     #main-content aside.sidebar .content-wrapper .sidebar-latest-posts a:visited:nth-of-type(even) {
       background: #A0D2DB;
-      border-bottom: 3px solid #A0D2DB; }
+      border-bottom: 5px solid #A0D2DB; }
       #main-content aside.sidebar .content-wrapper .sidebar-latest-posts a:link:nth-of-type(even):hover,
       #main-content aside.sidebar .content-wrapper .sidebar-latest-posts a:visited:nth-of-type(even):hover {
         background: none; }
     #main-content aside.sidebar .content-wrapper .sidebar-latest-posts a:link:nth-of-type(odd),
     #main-content aside.sidebar .content-wrapper .sidebar-latest-posts a:visited:nth-of-type(odd) {
       background: #C490D1;
-      border-bottom: 3px solid #C490D1; }
+      border-bottom: 5px solid #C490D1; }
       #main-content aside.sidebar .content-wrapper .sidebar-latest-posts a:link:nth-of-type(odd):hover,
       #main-content aside.sidebar .content-wrapper .sidebar-latest-posts a:visited:nth-of-type(odd):hover {
         background: none;
-        border-bottom: 3px solid #C490D1; }
+        border-bottom: 5px solid #C490D1; }
     #main-content aside.sidebar .content-wrapper .sidebar-latest-posts a:link:hover,
     #main-content aside.sidebar .content-wrapper .sidebar-latest-posts a:visited:hover {
       color: #fff;
@@ -420,7 +476,6 @@ footer {
       padding-bottom: 10px;
       background: linear-gradient(to right, #a0d2db 0%, #c490d1 50%, #b8336a 100%) left bottom #08080D no-repeat;
       background-size: 200px 7px;
-      /* if linear-gradient, we need to resize it */
       background-position: bottom center;
       color: #A0D2DB;
       font-size: 1rem;
@@ -446,6 +501,7 @@ footer {
     display: inline-block !important; }
     header .content-wrapper ul li a:link,
     header .content-wrapper ul li a:visited {
+      border-radius: 5px;
       color: #08080D;
       display: block;
       margin-bottom: 10px;
@@ -453,18 +509,18 @@ footer {
       header .content-wrapper ul li a:link:nth-of-type(even),
       header .content-wrapper ul li a:visited:nth-of-type(even) {
         background: #A0D2DB;
-        border-bottom: 3px solid #A0D2DB; }
+        border-bottom: 5px solid #A0D2DB; }
         header .content-wrapper ul li a:link:nth-of-type(even):hover,
         header .content-wrapper ul li a:visited:nth-of-type(even):hover {
           background: none; }
       header .content-wrapper ul li a:link:nth-of-type(odd),
       header .content-wrapper ul li a:visited:nth-of-type(odd) {
         background: #C490D1;
-        border-bottom: 3px solid #C490D1; }
+        border-bottom: 5px solid #C490D1; }
         header .content-wrapper ul li a:link:nth-of-type(odd):hover,
         header .content-wrapper ul li a:visited:nth-of-type(odd):hover {
           background: none;
-          border-bottom: 3px solid #C490D1; }
+          border-bottom: 5px solid #C490D1; }
       header .content-wrapper ul li a:link:hover,
       header .content-wrapper ul li a:visited:hover {
         color: #fff;
