--- a/css/main.scss
+++ b/css/main.scss
@@ -158,6 +158,44 @@
           }
       }
   }
+  /* hub selection */ 
+  #hub-selection {
+      .content-wrapper {
+        @include block-links;
+          h2 {
+              text-align: center;
+              text-transform: lowercase;
+              padding: 10px 0px;
+              span {
+                  color: $light-blue;
+                  font-weight: $light;
+              }
+          }
+          .hub-link-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+          #hub-one {
+              margin: 0 auto;
+              a:link,
+              a:visited {
+              width: 100px;
+              height: 20px;
+              }
+              #hub-description {
+                  opacity: 0;
+                  padding-left: 20px;
+              }
+              &:hover {
+                  #hub-description {
+                      opacity: 1;
+                      transition: 1s opacity;
+                  }
+              }
+          }
+      }
+  }
   /* blog */ 
   #main-content {
       display: flex;
@@ -169,7 +207,8 @@
           flex-direction: column;
           .blog-single-post-gradient-wrapper {
               @include emery-gradient-border;
-              padding: 10px;
+              border-radius: 10px;
+              padding: 7px;
               margin-bottom: 20px;
           }
           article.blog-single-post {
@@ -184,7 +223,8 @@
              padding: 5px 0px;
              h1 {
                  background: $light-blue;
-                 border-bottom: 3px solid $light-blue;
+                 border-bottom: 5px solid $light-blue;
+                 border-radius: 5px;
                  color: $black;
                  font-size: 1.25rem;
                  line-height: 1.2rem;
@@ -311,6 +351,7 @@
                   padding: 10px 0px;
               }
               .sidebar-about {
+                  text-transform: lowercase;
                   h1.sidebar-logo-span {
                       @include emery-gradient;
                       color: $light-blue;
@@ -339,6 +380,9 @@
                                   color: #fff;
                                   transition: .3s color;
                               }
+                          }
+                          &:last-of-type {
+                            padding-bottom: 10px;
                           }
                       }
                   }
