--- a/css/main.scss
+++ b/css/main.scss
@@ -133,6 +133,7 @@
               li {
                   list-style-type: none;
                   text-transform: lowercase;
+                  margin-left: 20px;
                   a:link,
                   a:visited {
                       color: #fff;
@@ -507,6 +508,20 @@
                       }
                   }
               }
+          }
+      }
+      /* home page and hub selection */ 
+      #hub-selection {
+          .content-wrapper {
+            .hub-container {
+                display: flex;
+                flex-direction: row;
+                align-items: flex-start;
+                justify-content: space-around;
+                max-width: 75%;
+                min-width: 65%;
+                margin: 0 auto;
+            }
           }
       }
       main {
