Made even numbered links inside of hub containers have a light blue background with nth-of-type selector

--- a/css/main.scss
+++ b/css/main.scss
@@ -177,6 +177,17 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            &:nth-of-type(even) {
+                a:link,
+                a:visited {
+                    background: $light-blue;
+                    border-bottom: 5px solid $light-blue;
+                    &:hover {
+                        background: none;
+                        transition: .3s background;
+                    }
+                }
+            }
           }
           #hub-one, #hub-two, #hub-three {
               @include hub;
