--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,14 @@ header .content-wrapper {
     flex-direction: column;
     align-items: center;
     justify-content: center; }
+    #hub-selection .content-wrapper .hub-link-container:nth-of-type(even) a:link,
+    #hub-selection .content-wrapper .hub-link-container:nth-of-type(even) a:visited {
+      background: #A0D2DB;
+      border-bottom: 5px solid #A0D2DB; }
+      #hub-selection .content-wrapper .hub-link-container:nth-of-type(even) a:link:hover,
+      #hub-selection .content-wrapper .hub-link-container:nth-of-type(even) a:visited:hover {
+        background: none;
+        transition: .3s background; }
   #hub-selection .content-wrapper #hub-one, #hub-selection .content-wrapper #hub-two, #hub-selection .content-wrapper #hub-three {
     margin: 0 auto; }
     #hub-selection .content-wrapper #hub-one a:link,
